--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,10 @@
+[package]
+name = "gcore-proxy"
+version = "0.1.0"
+edition = "2021"
+
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
 fastedge = "0.1"
